align memorials correctly, wrap word if it's too long

--- a/memorial-tracker-ui/src/components/SideBar/Memorial/Memorial.module.css
+++ b/memorial-tracker-ui/src/components/SideBar/Memorial/Memorial.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 12%;
   border: 1px solid #eee;
-  font-size: 1.6rem;
+  font-size: 1rem;
   display: flex;
   flex-direction: row;
 }
@@ -25,6 +25,12 @@
 }
 
 .memorialInfo {
+  flex: 1;
   margin: auto;
   text-align: center;
+}
+
+.wordWrapper {
+  margin: 0 auto;
+  max-width: 50%;
 }
